Fix visibility of plugin-tree-view inline actions on hover (#10375)

--- a/packages/plugin-ext/src/main/browser/style/tree.css
+++ b/packages/plugin-ext/src/main/browser/style/tree.css
@@ -40,3 +40,7 @@
     margin-bottom: 10px;
     margin-left: 17px;
 }
+
+.theia-tree-view .theia-TreeNode:not(:hover):not(.theia-mod-selected) .theia-tree-view-inline-action {
+    display: none;
+}
